# Stargazer

./: .gitignore  README.md
ComputerGraphics/Iris/: CMakeLists.txt  Iris.cpp  Iris.h
ComputerGraphics/Iris/include/Applications/: IrisAppC10S1.h  IrisAppC10S2.h  IrisAppC11S1.h
ComputerGraphics/Iris/include/Components/: IrisMesh.h
ComputerGraphics/Iris/include/Core/: IrisBase.h  IrisCore.h
ComputerGraphics/Iris/include/Core/Application/: IIrisApplication.h
ComputerGraphics/Iris/include/Core/Drawing/: IIrisImage.h  IrisDoubleBuffer.h
ComputerGraphics/Iris/include/Core/Render/: IrisRender.h  IrisShader.h  IrisZBuffer.h
ComputerGraphics/Iris/include/Core/Structure/: IrisTrie.h
ComputerGraphics/Iris/include/Display/: IrisBitmap.h
ComputerGraphics/Iris/include/Shaders/: IrisShaderL10S1.h  IrisShaderL10S2.h  IrisShaderL11S1Gaussian.h
ComputerGraphics/Iris/include/Utility/: IrisWin32Global.h  IrisWin32Helper.h
ComputerGraphics/Iris/src/Applications/: IrisAppC10S1.cpp  IrisAppC10S2.cpp  IrisAppC11S1.cpp
ComputerGraphics/Iris/src/Components/: IrisMesh.cpp
ComputerGraphics/Iris/src/Core/: IrisCore.cpp
ComputerGraphics/Iris/src/Core/Drawing/: IrisDoubleBuffer.cpp
ComputerGraphics/Iris/src/Core/Render/: IrisRender.cpp  IrisShader.cpp  IrisZBuffer.cpp
ComputerGraphics/Iris/src/Core/Structure/: IrisTrie.cpp
ComputerGraphics/Iris/src/Display/: IrisBitmap.cpp
ComputerGraphics/Iris/src/Shaders/: IrisShaderL10S1.cpp  IrisShaderL10S2.cpp  IrisShaderL11S1Gaussian.cpp
ComputerGraphics/Iris/src/Utility/: IrisWin32Global.cpp  IrisWin32Helper.cpp
(+316 files in other folders)
